--- a/src/InterShareMobile.iOS/InterShareMobile.iOS.csproj
+++ b/src/InterShareMobile.iOS/InterShareMobile.iOS.csproj
@@ -78,6 +78,7 @@
     <None Include="Entitlements.plist" />
     <None Include="Info.plist" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Resources\clipboard.png" />
   </ItemGroup>
   <ItemGroup>
     <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\appstore1024.png" />
