--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -72,6 +72,7 @@ jobs:
   android:
     name: Build Android APK
     runs-on: ubuntu-latest
+    environment: Build
     steps:
     - uses: actions/checkout@v2
       with:
