--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -89,7 +89,7 @@ jobs:
         dotnet restore src/InterShareMobile.Android/InterShareMobile.Android.csproj
 
     - name: Setup Android signing
-      run: (echo ${{ secrets.KEYSTORE }} | base64 — decode) > src/InterShareMobile.Android/InterShare.keystore
+      run: (echo ${{ secrets.ANDROID_KEYSTORE }} | base64 — decode) > src/InterShareMobile.Android/InterShare.keystore
 
     - name: Get Previous tag
       id: latest_tag
