--- a/src/InterShareMobile.iOS/InterShareMobile.iOS.csproj
+++ b/src/InterShareMobile.iOS/InterShareMobile.iOS.csproj
@@ -66,10 +66,11 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <MtouchArch>ARM64</MtouchArch>
-    <CodesignKey>iPhone Developer</CodesignKey>
+    <CodesignKey>Apple Distribution: Julian Baumann (PBYG8F53RH)</CodesignKey>
     <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
     <MtouchLink>SdkOnly</MtouchLink>
     <LangVersion>8.0</LangVersion>
+    <CodesignProvision>InterShare Mobile Ad Hoc</CodesignProvision>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Main.cs" />
