--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,12 @@
-name: Build
+name: Deploy
 
 on:
-  push:
-    branches:
-      - '**'
+  workflow_dispatch:
+    inputs:
+      version:
+        description: "Version number"
+        default: "0.0.0"
+        required: true
 
 jobs:
   iOS:
@@ -64,15 +67,23 @@ jobs:
     - name: Build iOS
       run: MSBuild /t:Build /p:Configuration=Release /p:Platform=iPhone /p:BuildIpa=true src/InterShareMobile.iOS/InterShareMobile.iOS.csproj
 
+    - name: Upload app to TestFlight
+      uses: apple-actions/upload-testflight-build@v1
+      with:
+        app-path: ${{ github.workspace }}/src/InterShareMobile.iOS/bin/iPhone/Release/InterShareMobile.iOS.ipa
+        issuer-id: ${{ secrets.APPSTORE_ISSUER_ID }}
+        api-key-id: ${{ secrets.APPSTORE_KEY_ID }}
+        api-private-key: ${{ secrets.APPSTORE_PRIVATE_KEY }}
+
     - name: Rename IPA
       run: mv src/InterShareMobile.iOS/bin/iPhone/Release/InterShareMobile.iOS.ipa \
-            src/InterShareMobile.iOS/InterShare.ipa
+            src/InterShareMobile.iOS/InterShare-${{ github.event.inputs.version }}.ipa
 
     - name: Upload artifacts
       uses: actions/upload-artifact@v2
       with:
         name: iOS-IPA
-        path: ${{ github.workspace }}/src/InterShareMobile.iOS/InterShare.ipa
+        path: ${{ github.workspace }}/src/InterShareMobile.iOS/InterShare-${{ github.event.inputs.version }}.ipa
 
   android:
     name: Build Android APK
@@ -123,10 +134,35 @@ jobs:
 
     - name: Rename APK
       run: mv src/InterShareMobile.Android/bin/Release/com.julian_baumann.intershare-Signed.apk \
-            src/InterShareMobile.Android/InterShare.apk
+            src/InterShareMobile.Android/InterShare-${{ github.event.inputs.version }}.apk
 
     - name: Upload artifacts
       uses: actions/upload-artifact@v2
       with:
         name: Android-APK
-        path: ${{ github.workspace }}/src/InterShareMobile.Android/InterShare.apk
+        path: ${{ github.workspace }}/src/InterShareMobile.Android/InterShare-${{ github.event.inputs.version }}.apk
+
+  create-release:
+    runs-on: macos-latest
+    name: Create Release
+    needs: [iOS, android]
+    steps:
+    - name: Download artifacts
+      uses: actions/download-artifact@v3
+      with:
+        path: ${{ github.workspace }}/downloads
+
+    - name: Create Release strings
+      id: release_strings
+      run: |
+        echo "RELEASE_TAG=${{ github.event.inputs.version }}" >> $GITHUB_ENV
+        echo "RELEASE_NAME=Version ${{ github.event.inputs.version }}" >> $GITHUB_ENV
+
+    - name: Create GitHub Release
+      uses: softprops/action-gh-release@v1
+      with:
+        tag_name: ${{ env.RELEASE_TAG }}
+        name: ${{ env.RELEASE_NAME }}
+        files: |
+          ${{ github.workspace }}/downloads/Android-APK/InterShare-${{ github.event.inputs.version }}.apk
+          ${{ github.workspace }}/downloads/iOS/InterShare-${{ github.event.inputs.version }}.ipa
