--- a/src/InterShareMobile/InterShareMobile.csproj
+++ b/src/InterShareMobile/InterShareMobile.csproj
@@ -18,10 +18,8 @@
     <LangVersion>9</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="IPNetwork2" Version="2.5.386" />
-    <PackageReference Include="Makaretu.Dns" Version="2.0.1" />
-    <PackageReference Include="SMTSP" Version="2.1.0-beta" />
-    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2291" />
+    <PackageReference Include="SMTSP" Version="2.1.2-beta" />
+    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2478" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
     <PackageReference Include="XamEffects" Version="1.6.3" />
     <PackageReference Include="Xamarin.CommunityToolkit" Version="2.0.0" />
@@ -45,11 +43,19 @@
     <EmbeddedResource Include="Assets\Icon.png" />
   </ItemGroup>
 
-<!--  <ItemGroup>-->
-<!--    <Reference Include="SMTSP, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">-->
-<!--      <HintPath>..\..\..\SMTSP\src\SMTSP\bin\Debug\netstandard2.0\SMTSP.dll</HintPath>-->
-<!--    </Reference>-->
-<!--  </ItemGroup>-->
+<!--    <ItemGroup>-->
+<!--      <Reference Include="MDNS, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">-->
+<!--        <HintPath>..\..\..\SMTSP\src\SMTSP\bin\Debug\netstandard2.1\MDNS.dll</HintPath>-->
+<!--      </Reference>-->
+<!--      <Reference Include="SMTSP, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">-->
+<!--        <HintPath>..\..\..\SMTSP\src\SMTSP\bin\Debug\netstandard2.1\SMTSP.dll</HintPath>-->
+<!--      </Reference>-->
+
+<!--      <PackageReference Include="Portable.BouncyCastle" Version="1.9.0" />-->
+<!--      <PackageReference Include="Common.Logging" Version="3.4.1" />-->
+<!--      <PackageReference Include="IPNetwork2" Version="2.1.2" />-->
+<!--      <PackageReference Include="Makaretu.Dns" Version="2.0.1" />-->
+<!--    </ItemGroup>-->
 
   <ItemGroup>
     <ProjectReference Include="..\Media.Plugin\Media.Plugin.csproj" />
